[package]
name = "rbsimulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "mp3",
  "hdr",
  "vorbis",
  "x11",
  "filesystem_watcher",
] }
bevy_kira_audio = { version = "0.13", features = ["mp3"] }
clap = {version = "4.1.1", features = ["derive"]}
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.91"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
